# social_network

./: .env  .gitignore  README.md  docker-compose.loadtest.yml  docker-compose.monitoring.yml  docker-compose.service-replication.yml  docker-compose.service-single.yml  docker-compose.yml
k6_tests/: loadtest_search.js  search_and_get.js  user_register.js  user_search.js
misc/: openapi.json  user_register.json
monitoring/: grafana_dashboards.yml  prometheus.yml  social_dashboard.json
monitoring/grafana/dashboards/: cadvisor_prometheus_893.json  dashboards.yml  k6_prometheus_19665.json  k6_user_search.json  social.json
monitoring/grafana/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
postman/: hw01.Social Network API.postman_collection.json
service/: CMakeLists.txt  Dockerfile  main.cpp  make_script.sh
service/include/: app.h  app_connection_pool.h  app_metrics.h
service/include/configuration/: configuration.h  configuration_data.h
service/include/helpers/: dns_address.h  environment.h  filepath.h  ip_address.h  number_parser.h  random.h  socket_address.h  string.h  thread.h  thread_pool.h  url.h
service/include/logger/: logger.h  logger_base.h  logger_common.h  logger_factory.h  logger_file.h  logger_stderr.h  logger_stdout.h
service/include/thread_pool/: thread_pool.h  thread_pool_task.h
service/sources/: CMakeLists.txt  app.cpp
service/sources/configuration/: configuration.cpp  configuration_data.cpp
service/sources/helpers/: dns_address.cpp  environment.cpp  filepath.cpp  ip_address.cpp  number_parser.cpp  random.cpp  socket_address.cpp  string.cpp  thread.cpp  thread_pool.cpp  url.cpp
service/sources/logger/: logger.cpp  logger_base.cpp  logger_factory.cpp  logger_file.cpp  logger_stderr.cpp  logger_stdout.cpp
service/sources/thread_pool/: thread_pool.cpp
users_generator/: generate_users.py  interests_raw.csv
